fix multiples docs, bugs, css...

--- a/src/app/pages/calls/calls-list/calls-list.component.html
+++ b/src/app/pages/calls/calls-list/calls-list.component.html
@@ -1,3 +1,5 @@
-<app-dynamic-table [headers]="headers" [data]="calls" [actions]="['edit', 'delete']" (edit)="updateDocument($event)"
-    (delete)="deleteDocument($event)" (rowClick)="onRowClick($event)">
+<app-dynamic-table [headers]="headers" [data]="calls" [actions]="['edit', 'delete']" 
+    (edit)="updateDocument($event)"
+    (delete)="deleteDocument($event)" 
+    (rowClick)="onRowClick($event)">
 </app-dynamic-table>
