--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,83 +1,88 @@
-<h3>Chat:</h3>
-<div class="chat-container">
-  <!-- COLUNA ESQUERDA FIXA -->
-  <div class="sidebar">
-    <!-- Operador Logado -->
-    <mat-card class="card-board-chat">
-      <mat-card-title>OPERADOR LOGADO</mat-card-title>
-      <div class="user-info">
-        <img [src]="operator.img" alt="avatar" class="avatar" />
-        <span class="status" [class.online]="isOnline"></span>
-        <span>{{ operator.name }}</span>
-      </div>
-      <app-dynamic-button type="login" (clicked)="onLogin()" class="btn-login"></app-dynamic-button>
-    </mat-card>
+<div class="container">
+  <h3>Chat:</h3>
+  <div class="chat-container">
+    <!-- COLUNA ESQUERDA FIXA -->
+    <div class="sidebar">
+      <!-- Operador Logado -->
+      <mat-card class="card-board-chat">
+        <mat-card-title>OPERADOR LOGADO</mat-card-title>
+        <div class="user-info">
+          <img [src]="operator.img" alt="avatar" class="avatar" />
+          <span class="status" [class.online]="isOnline"></span>
+          <span>{{ operator.name }}</span>
+        </div>
+        <app-dynamic-button type="login" (clicked)="onLogin()" class="btn-login"></app-dynamic-button>
+      </mat-card>
 
-    <!-- Fila de Espera -->
-    <mat-card class="card-board">
-      <mat-card-title>FILA DE ESPERA</mat-card-title>
-      <table mat-table [dataSource]="waitingList" class="mat-elevation-z1">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Nome </th>
-          <td mat-cell *matCellDef="let e"> {{e.name}} </td>
-        </ng-container>
-        <ng-container matColumnDef="sector">
-          <th mat-header-cell *matHeaderCellDef> Setor </th>
-          <td mat-cell *matCellDef="let e"> {{e.sector}} </td>
-        </ng-container>
-        <ng-container matColumnDef="time">
-          <th mat-header-cell *matHeaderCellDef> Tempo </th>
-          <td mat-cell *matCellDef="let e"> {{e.time}} </td>
-        </ng-container>
+      <!-- Fila de Espera -->
+      <mat-card class="card-board">
+        <mat-card-title>FILA DE ESPERA</mat-card-title>
+        <table mat-table [dataSource]="waitingList" class="mat-elevation-z1">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <td mat-cell *matCellDef="let e"> {{e.name}} </td>
+          </ng-container>
+          <ng-container matColumnDef="sector">
+            <th mat-header-cell *matHeaderCellDef> Setor </th>
+            <td mat-cell *matCellDef="let e"> {{e.sector}} </td>
+          </ng-container>
+          <ng-container matColumnDef="time">
+            <th mat-header-cell *matHeaderCellDef> Tempo </th>
+            <td mat-cell *matCellDef="let e"> {{e.time}} </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="['name', 'sector', 'time']" style="height: 10px !important;"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['name', 'sector', 'time'];" style="height: 30px !important;"></tr>
-      </table>
-    </mat-card>
+          <tr mat-header-row *matHeaderRowDef="['name', 'sector', 'time']" style="height: 10px !important;"></tr>
+          <tr mat-row *matRowDef="let row; columns: ['name', 'sector', 'time'];" style="height: 30px !important;"></tr>
+        </table>
+      </mat-card>
 
-    <!-- Operadores Online -->
-    <mat-card class="card-board">
-      <mat-card-title>OPERADORES ONLINE</mat-card-title>
-      <table mat-table [dataSource]="onlineOperators" class="mat-elevation-z1">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Nome </th>
-          <td mat-cell *matCellDef="let e"> {{e.name}} </td>
-        </ng-container>
-        <ng-container matColumnDef="sector">
-          <th mat-header-cell *matHeaderCellDef> Setor </th>
-          <td mat-cell *matCellDef="let e"> {{e.sector}} </td>
-        </ng-container>
-        <ng-container matColumnDef="atendimentos">
-          <th mat-header-cell *matHeaderCellDef> Atend... </th>
-          <td mat-cell *matCellDef="let e"> {{e.atendimentos}} </td>
-        </ng-container>
+      <!-- Operadores Online -->
+      <mat-card class="card-board">
+        <mat-card-title>OPERADORES ONLINE</mat-card-title>
+        <table mat-table [dataSource]="onlineOperators" class="mat-elevation-z1">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <td mat-cell *matCellDef="let e"> {{e.name}} </td>
+          </ng-container>
+          <ng-container matColumnDef="sector">
+            <th mat-header-cell *matHeaderCellDef> Setor </th>
+            <td mat-cell *matCellDef="let e"> {{e.sector}} </td>
+          </ng-container>
+          <ng-container matColumnDef="atendimentos">
+            <th mat-header-cell *matHeaderCellDef> Atend... </th>
+            <td mat-cell *matCellDef="let e"> {{e.atendimentos}} </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="['name', 'sector', 'atendimentos']" style="height: 10px !important;"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['name', 'sector', 'atendimentos'];" style="height: 30px !important;">
-        </tr>
-      </table>
-    </mat-card>
-  </div>
+          <tr mat-header-row *matHeaderRowDef="['name', 'sector', 'atendimentos']" style="height: 10px !important;">
+          </tr>
+          <tr mat-row *matRowDef="let row; columns: ['name', 'sector', 'atendimentos'];"
+            style="height: 30px !important;">
+          </tr>
+        </table>
+      </mat-card>
+    </div>
 
-  <!-- COLUNA DIREITA FLEXÍVEL -->
-  <div class="main">
-    <!-- Atendimentos -->
-    <mat-card>
-      <mat-card-title>ATENDIMENTOS</mat-card-title>
-      <div class="cards">
-        <mat-card *ngFor="let name of activeChats" class="user-card">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6XHD9yjd8auL9plQXjsebFt4CJ-cS8ejRtw&s" style="width: 30px;" alt="avatar" />
-          <div>{{ name }}</div>
-        </mat-card>
-      </div>
-    </mat-card>
+    <!-- COLUNA DIREITA FLEXÍVEL -->
+    <div class="main">
+      <!-- Atendimentos -->
+      <mat-card>
+        <mat-card-title>ATENDIMENTOS</mat-card-title>
+        <div class="cards">
+          <mat-card *ngFor="let name of activeChats" class="user-card">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6XHD9yjd8auL9plQXjsebFt4CJ-cS8ejRtw&s"
+              style="width: 30px;" alt="avatar" />
+            <div>{{ name }}</div>
+          </mat-card>
+        </div>
+      </mat-card>
 
-    <!-- Chat -->
-    <mat-card class="chat-box">
-      <mat-card-title>CHAT</mat-card-title>
-      <div class="chat-area">
-        <!-- Conteúdo do chat -->
-      </div>
-    </mat-card>
+      <!-- Chat -->
+      <mat-card class="chat-box">
+        <mat-card-title>CHAT</mat-card-title>
+        <div class="chat-area">
+          <!-- Conteúdo do chat -->
+        </div>
+      </mat-card>
+    </div>
   </div>
 </div>
