--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -170,3 +170,11 @@ table.mat-table {
   margin-left: auto;
   margin-right: auto;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  padding: 15px;
+  border-radius: 10px;
+}
