--- a/src/app/pages/home/client-home/client-home.component.scss
+++ b/src/app/pages/home/client-home/client-home.component.scss
@@ -1,16 +1,7 @@
 .container {
-    max-width: 1030px;
-    // margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-    gap: 10px;
-    box-sizing: border-box;
-  }
-  
-  .chart-container {
-    max-width: 1030px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
-    gap: 10px;
-    box-sizing: border-box;
-  }
+  display: flex;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  padding: 15px;
+  border-radius: 10px;
+}
