fix client page and fix traduction and anys layouts

--- a/src/app/pages/home/client-home/client-home.component.html
+++ b/src/app/pages/home/client-home/client-home.component.html
@@ -1,5 +1,29 @@
 <div class="container">
-    <h3>Clientes:</h3>
+    <h3>Gerenciar clientes:</h3>
 
-
+    <div class="dropdown-container">
+        <div *ngFor="let company of companies; let i = index" class="dropdown">
+            <div class="dropdown-header" (click)="toggleDropdown(i)">
+                <div class="header-drop-down">
+                    <mat-icon>apartment</mat-icon>
+                    <span>{{ company.name }}</span>
+                    <mat-icon>person_add</mat-icon>
+                </div>
+                <div class="header-actions">
+                    <mat-icon>{{ activeDropdown === i ? 'expand_less' : 'expand_more' }}</mat-icon>
+                </div>
+            </div>
+            <div class="dropdown-body" *ngIf="activeDropdown === i">
+                <div *ngIf="company.clients.length > 0" >
+                    <app-dynamic-table [headers]="headers" [data]="company.clients" [actions]="['edit', 'delete']"
+                    (edit)="updateDocument($event)" (delete)="deleteDocument($event)">
+                </app-dynamic-table>
+                </div>
+                
+                <div *ngIf="company.clients.length === 0" class="no-videos-message">
+                    <p>Não há clientes cadastrados.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
