--- a/src/app/shared/components/holiday-calendar/holiday-calendar.component.html
+++ b/src/app/shared/components/holiday-calendar/holiday-calendar.component.html
@@ -90,7 +90,7 @@
                         <div class="event-details">
                             <div class="event-header">
                                 <span class="event-date">
-                                    <mat-icon class="date-icon">calendar_today</mat-icon>
+                                    <!-- <mat-icon class="date-icon">calendar_today</mat-icon> -->
                                     {{ event.date | date:'dd/MM/yyyy' }}
                                 </span>
                                 <span class="event-title" [matTooltip]="event.description" matTooltipPosition="right">
