--- a/src/app/shared/components/dynamic-table/dynamic-table.component.html
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.html
@@ -9,7 +9,7 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="actions">
+      <ng-container matColumnDef="actions" class="action-cell right-align">
         <th mat-header-cell *matHeaderCellDef>{{ 'table.actions' | translate }}</th>
         <td mat-cell *matCellDef="let row" class="action-cell">
           <mat-icon *ngIf="actions.includes('load')" class="icon edit" (click)="emit('load', row)">upload</mat-icon>
