--- a/src/app/shared/components/dynamic-select/dynamic-select.component.html
+++ b/src/app/shared/components/dynamic-select/dynamic-select.component.html
@@ -6,20 +6,14 @@
 
     <mat-select [ngModel]="model" (ngModelChange)="onSelectionChange($event)" [disabled]="disabled"
       [placeholder]="placeholder" [required]="isRequired">
-      <mat-option *ngIf="showDefaultOption" [value]="''">{{ defaultOptionLabel }}</mat-option>
+      <mat-option *ngIf="showDefaultOption" [value]="null">{{ defaultOptionLabel }}</mat-option>
       <mat-option *ngFor="let option of options" [value]="option[valueKey] ?? option">
         {{ option[labelKey] ?? option }}
       </mat-option>
     </mat-select>
 
-    <!-- ERRO -->
     <mat-error *ngIf="formControl.invalid && (formControl.touched || formControl.dirty)">
       {{ errorMessage || 'Campo obrigatório' }}
     </mat-error>
   </mat-form-field>
-
-  <button *ngIf="type !== 'sector'" mat-icon-button [color]="getButtonColor()" (click)="handleButtonClick()"
-    [matTooltip]="model ? 'Desvincular' : 'Adicionar novo'" class="action-button">
-    <mat-icon>{{ getButtonIcon() }}</mat-icon>
-  </button>
 </div>
