--- a/src/app/pages/home/client-home/client-home.component.scss
+++ b/src/app/pages/home/client-home/client-home.component.scss
@@ -70,3 +70,14 @@
   width: 100%;
   justify-content: space-between;
 }
+
+mat-icon.add-client {
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover {
+    color: #a3a3a3e5; // amarelo claro
+    text-shadow: 0px 0px 12px rgb(248, 220, 127); // esfumaçado
+    transform: scale(1.1);
+  }
+}
