--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -1,7 +1,7 @@
 .chat-container {
   display: flex;
-  height: 94vh;
-  padding: 8px;
+  // height: 94vh;
+  // padding: 8px;
   gap: 12px;
   background-color: #f4f6f8;
   font-size: 12px;
