--- a/src/app/pages/home/operator-home/operator-home.component.html
+++ b/src/app/pages/home/operator-home/operator-home.component.html
@@ -14,35 +14,34 @@
   <app-dashboard-card (click)="openCallsModal('all')" icon="headset_off" [end]="countAllCalls" [duration]="1200"
     [label]="'home.components.ticket-answered' | translate" color="#ff9800">
   </app-dashboard-card>
-
 </div>
 
 <!-- Exibe loading opcionalmente -->
 <div *ngIf="isLoading" class="loading-container">
   <mat-spinner></mat-spinner>
-  <p>Carregando dados, por favor aguarde...</p>
+  <p>{{ 'loading.data' | translate }}</p>
 </div>
-
-
 
 <div class="chart-container" *ngIf="!isLoading">
-  <!-- <app-chart [type]="ChartType.BAR" [title]="'charts.barChart.title' | translate" [chamados]="simplifiedCalls"></app-chart> -->
-  <app-chart [type]="ChartType.LINE" [title]="'charts.lineChart.title' | translate"
-    [chamados]="simplifiedCalls"></app-chart>
+  <app-chart [type]="ChartType.LINE" 
+    [title]="'charts.lineChart.title' | translate"
+    [chamados]="simplifiedCalls">
+  </app-chart>
 
-  <app-pie-chart [title]="'charts.pieChart.title' | translate" [data]="pieChartData">
+  <app-pie-chart 
+    [title]="'charts.pieChart.title' | translate" [data]="pieChartData">
   </app-pie-chart>
 
-
-  <!-- <app-chart [type]="ChartType.LINE" [title]="'charts.lineChart.title' | translate"
-    [chamados]="simplifiedCalls"></app-chart> -->
-
-  <!-- <app-chart [type]="ChartType.COLUMN" [title]="'charts.columnChart.title' | translate"
-    [chamados]="simplifiedCalls"></app-chart> -->
-  <app-column-tag-chart [title]="'Chamados por Tags'" [subtitle]="'Distribuição de chamados por tipo de problema'"
-    [yAxisTitle]="'Quantidade de Chamados'" [height]="500" [fetchData]="true" [serviceMethod]="getChartData">
+  <app-column-tag-chart 
+    [titleKey]="'chart.title'" 
+    [subtitleKey]="'chart.subtitle'" 
+    [yAxisTitleKey]="'chart.yAxisTitle'"
+    [height]="500" 
+    [fetchData]="true" 
+    [serviceMethod]="getChartData">
   </app-column-tag-chart>
 </div>
+
 
 
 
