--- a/src/app/shared/components/holiday-calendar/holiday-calendar.component.scss
+++ b/src/app/shared/components/holiday-calendar/holiday-calendar.component.scss
@@ -1,7 +1,7 @@
 .calendar-card {
     background-color: #f5f5f5;
-    margin: 20px;
-    padding: 25px;
+    // margin: 20px;
+    padding: 15px;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     max-width: 1100px;
