fix varias coisas aleatorias

--- a/src/app/pages/home/call-modal/call-modal.component.html
+++ b/src/app/pages/home/call-modal/call-modal.component.html
@@ -1,7 +1,7 @@
 <mat-dialog-content class="modal-shared">
   <div class="modal-header">
     <div class="modal-header-row">
-      <h2> {{ getTitle() | translate }} </h2>
+      <h2> {{ getTitle() | translate }} : {{ data.tagName }} </h2>
       <button mat-icon-button (click)="close()" aria-label="Fechar">
         <mat-icon>close</mat-icon>
       </button>
